<?xml version="1.0"?>
<package>
  <name>lsd_slam_viewer</name>
  <version>0.0.0</version>
  <description>3D Viewer for LSD-SLAM</description>

  <maintainer email="engelj@in.tum.de">Jakob Engel</maintainer>

  <license>see http://vision.in.tum.de/lsdslam</license>

  <url>http://vision.in.tum.de/lsdslam</url>
  <author>Jakob Engel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>opencv2</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>opencv2</run_depend>

</package>
